cabal-version:       2.0
name:                test
version:             0.0.0
synopsis:            See README for more info
description:         See README for more info
homepage:            https://github.com/chessai/test
bug-reports:         https://github.com/chessai/test/issues
license:             BSD3
license-file:        LICENSE
author:              chessai
maintainer:          chessai1996@gmail.com
copyright:           2019 chessai
category:            Graphics
build-type:          Simple
extra-doc-files:     README.md
                   , CHANGELOG.md
tested-with:         GHC == 8.2.2, GHC == 8.4.4, GHC == 8.6.3

source-repository head
  type:                git
  location:            https://github.com/chessai/test.git

library
  hs-source-dirs:      src
  exposed-modules:     Test
                       Prelude

  build-depends:       base-noprelude >= 4.10.1.0 && < 4.13
                     , relude

  ghc-options:         -Wall
                       -Wincomplete-uni-patterns
                       -Wincomplete-record-updates
                       -Wcompat
                       -Widentities
                       -Wredundant-constraints
                       -fhide-source-paths

  default-language:    Haskell2010

test-suite test-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs

  build-depends:       base-noprelude >= 4.10.1.0 && < 4.13
                     , test
                     , relude

  ghc-options:         -Wall
                       -threaded
                       -rtsopts
                       -with-rtsopts=-N
                       -Wincomplete-uni-patterns
                       -Wincomplete-record-updates
                       -Wcompat
                       -Widentities
                       -Wredundant-constraints
                       -fhide-source-paths

  default-language:    Haskell2010
